Fix horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -196,10 +196,6 @@ height: 92vh;
   cursor: pointer;
 }
 
-.container-fluid {
-  padding-right: 0px !important;
-  padding-left: 0px !important;
-}
 .bold{
   font-weight: bold;
 }
@@ -208,4 +204,8 @@ height: 92vh;
 }
 .moveFilterBar{
   float: right;
+}
+div.bgtrans {
+  margin-right: 0;
+  margin-left: 0;
 }
